--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
-    "initdata": "node scripts/getFeatures.js"
+    "build": "node scripts/getFeatures.js && vitepress build"
   },
   "repository": {
     "type": "git",
