--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
-    "build": "node scripts/getFeatures.mjs && vitepress build"
+    "data": "node scripts/getFeatures.mjs"
   },
   "repository": {
     "type": "git",
