--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "blog",
   "version": "1.0.0",
+  "type": "module",
   "description": "duminghong's blog",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview",
-    "data": "node scripts/getFeatures.mjs"
+    "docs:preview": "vitepress preview"
   },
   "repository": {
     "type": "git",
