--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   },
   "homepage": "https://github.com/duminghong/blog#readme",
   "devDependencies": {
+    "mermaid": "^11.12.0",
     "vitepress": "^1.4.1",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-sidebar": "^1.29.0"
   },
   "dependencies": {
     "ant-design-vue": "^4.0.0-rc.6",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.7",
-    "marked": "^14.1.3"
+    "marked": "^14.1.3",
+    "svg-pan-zoom": "^3.6.2"
   }
 }
