--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vitepress-sidebar": "^1.29.0"
   },
   "dependencies": {
+    "@zumer/snapdom": "^1.9.11",
     "ant-design-vue": "^4.0.0-rc.6",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.7",
