--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "devDependencies": {
     "less": "^4.4.2",
     "mermaid": "^11.12.0",
-    "unocss": "^65.4.0",
-    "@unocss/preset-attributify": "^65.4.0",
+    "unocss": "^66.5.3",
     "vitepress": "^1.4.1",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-sidebar": "^1.29.0"
@@ -39,6 +38,7 @@
     "ant-design-vue": "^4.0.0-rc.6",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.7",
+    "json5": "^2.2.3",
     "marked": "^14.1.3",
     "svg-pan-zoom": "^3.6.2"
   }
