style: 统一代码格式化配置

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "printWidth": 80,
+  "printWidth": 120,
   "tabWidth": 2,
   "useTabs": false,
   "semi": false,
@@ -7,7 +7,7 @@
   "quoteProps": "as-needed",
   "trailingComma": "none",
   "bracketSpacing": true,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
   "arrowParens": "avoid",
   "htmlWhitespaceSensitivity": "ignore",
   "vueIndentScriptAndStyle": true,
@@ -20,7 +20,7 @@
         "parser": "vue",
         "htmlWhitespaceSensitivity": "ignore",
         "vueIndentScriptAndStyle": true,
-        "printWidth": 80
+        "printWidth": 120
       }
     }
   ]
