--- a/.editorconfig
+++ b/.editorconfig
@@ -9,9 +9,11 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
+indent_style = space
+indent_size = 2
+max_line_length = 120
 
 # Matches multiple files with brace expansion notation
-# Set default charset
 [*.{js,py,ts,tsx,jsx,vue}]
 charset = utf-8
 indent_style = space
