--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "vitepress-sidebar": "^1.29.0"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.5",
     "@vueuse/motion": "^3.0.3",
     "@zumer/snapdom": "^1.9.11",
     "ant-design-vue": "^4.0.0-rc.6",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.3.0",
     "element-plus": "^2.11.5",
     "json5": "^2.2.3",
+    "markdown-it": "^14.1.0",
     "marked": "^14.1.3",
     "svg-pan-zoom": "^3.6.2"
   }
