build: 添加 @babel/parser 和 @babel/traverse 依赖
更新 package.json 和 package-lock.json 文件，添加 @babel/parser 和 @babel/traverse 作为项目依赖，并同步更新相关依赖版本

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "vitepress-sidebar": "^1.29.0"
   },
   "dependencies": {
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
     "@types/dompurify": "^3.0.5",
     "@vueuse/motion": "^3.0.3",
     "@zumer/snapdom": "^1.9.11",
